--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,8 @@ dependencies {
 
     // Cicerone
     implementation 'com.github.terrakok:cicerone:6.6'
+
+    // RxJava 2
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.6'
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
 }
